[gd_scene load_steps=25 format=3 uid="uid://bb5i4ov7wm711"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_afi42"]
[ext_resource type="Texture2D" uid="uid://ujamagmqumfc" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/hurt/player-hurt-1.png" id="2_bcsst"]
[ext_resource type="Texture2D" uid="uid://baimxo73wejti" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/hurt/player-hurt-2.png" id="3_ompeu"]
[ext_resource type="Texture2D" uid="uid://d0qmsxob8xyl3" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/idle/player-idle-1.png" id="4_qv4kb"]
[ext_resource type="Texture2D" uid="uid://cnh3wonxqvmiy" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/idle/player-idle-2.png" id="5_4gd4q"]
[ext_resource type="Texture2D" uid="uid://ccasw7x53f8xp" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/idle/player-idle-3.png" id="6_5vign"]
[ext_resource type="Texture2D" uid="uid://b1b2wbtir56wf" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/idle/player-idle-4.png" id="7_vfkus"]
[ext_resource type="Texture2D" uid="uid://c300gf5lln654" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/jump/player-jump-1.png" id="8_esp14"]
[ext_resource type="Texture2D" uid="uid://cs837if5774ax" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/jump/player-jump-2.png" id="9_fvmqt"]
[ext_resource type="Texture2D" uid="uid://c02gq3coyu7p8" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-1.png" id="10_gvo6v"]
[ext_resource type="Texture2D" uid="uid://bxx0s5mtveiil" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-2.png" id="11_0obo8"]
[ext_resource type="Texture2D" uid="uid://du7sxdhgj8l53" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-3.png" id="12_uihdm"]
[ext_resource type="Texture2D" uid="uid://cdtsn1otkv5yb" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-4.png" id="13_ge0lv"]
[ext_resource type="Texture2D" uid="uid://ci7pldybdui3s" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-5.png" id="14_fffic"]
[ext_resource type="Texture2D" uid="uid://bvkgcdxx0u7pa" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/player/run/player-run-6.png" id="15_acbrv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ub4u7"]
height = 24.0

[sub_resource type="SpriteFrames" id="SpriteFrames_v7et7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bcsst")
}, {
"duration": 1.0,
"texture": ExtResource("3_ompeu")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qv4kb")
}, {
"duration": 1.0,
"texture": ExtResource("5_4gd4q")
}, {
"duration": 1.0,
"texture": ExtResource("6_5vign")
}, {
"duration": 1.0,
"texture": ExtResource("7_vfkus")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_esp14")
}, {
"duration": 1.0,
"texture": ExtResource("9_fvmqt")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_gvo6v")
}, {
"duration": 1.0,
"texture": ExtResource("11_0obo8")
}, {
"duration": 1.0,
"texture": ExtResource("12_uihdm")
}, {
"duration": 1.0,
"texture": ExtResource("13_ge0lv")
}, {
"duration": 1.0,
"texture": ExtResource("14_fffic")
}, {
"duration": 1.0,
"texture": ExtResource("15_acbrv")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_661nw"]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}

[sub_resource type="Animation" id="Animation_06fnr"]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}

[sub_resource type="Animation" id="Animation_ncael"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_cwyfn"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}

[sub_resource type="Animation" id="Animation_d2v3m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fbipa"]
resource_name = "Run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bbyht"]
_data = {
"Dead": SubResource("Animation_661nw"),
"Fall": SubResource("Animation_06fnr"),
"Idle": SubResource("Animation_ncael"),
"Jump": SubResource("Animation_cwyfn"),
"RESET": SubResource("Animation_d2v3m"),
"Run": SubResource("Animation_fbipa")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_afi42")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ub4u7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -5)
sprite_frames = SubResource("SpriteFrames_v7et7")
animation = &"Idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.4, 2.4)
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_vertical_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_bbyht")
}

[node name="FirepointRight" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="FirepointLeft" type="Marker2D" parent="."]
position = Vector2(-16, 0)

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
